--- a/backend/package.json
+++ b/backend/package.json
@@ -26,8 +26,10 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.2.0",
+    "@nestjs/typeorm": "^9.0.1",
     "class-validator": "^0.14.0",
     "joi": "^17.8.4",
+    "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "repository": "^0.2.0",
     "rxjs": "^7.2.0",
